# sbi-weather

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/: bme280.c  bme280.h  cli.c  cli.h  dht11.c  dht11.h  ds3231.c  ds3231.h  horology.c  horology.h  i2c.c  i2c.h  info.c  info.h  sbi-weather.c  store.c  store.h  tx23u.c  tx23u.h  wipe.c  wipe.h
